fixes margin and padding spacing issues

--- a/scss/framework/bootstrap/_jumbotron.scss
+++ b/scss/framework/bootstrap/_jumbotron.scss
@@ -17,8 +17,7 @@
 
   p {
     margin-bottom: ($jumbotron-padding / 2);
-    font-size: $jumbotron-font-size;
-    font-weight: 200;
+    font-size: $jumbotron-font-size;    
   }
 
   > hr {
@@ -44,11 +43,6 @@
     .container-fluid & {
       padding-left:  ($jumbotron-padding * 2);
       padding-right: ($jumbotron-padding * 2);
-    }
-
-    h1,
-    .h1 {
-      font-size: $jumbotron-heading-font-size;
     }
   }
 }
