--- a/scss/modules/_navbar.scss
+++ b/scss/modules/_navbar.scss
@@ -3,6 +3,10 @@
     padding-bottom: 60px;
     border-top: solid 10px $blue;
     background-color: transparent;
+    border-bottom: solid 1px white;
+    position: absolute;
+    top: 0;
+    width: 100%;
 
     &::before {
         margin: 0 auto;    
@@ -15,13 +19,20 @@
         width: 150px;
         z-index: 1;
     }
+
+    li a {
+        font-size: 16px;
+        margin-top: 5px;
+    }
 }
+
 .navbar-brand {
     position: absolute;
     width: 100%;
     left: 0;
     text-align: center;
     margin: 0 auto;
+    height: 65px;
 }
 
 .navbar-toggle {
